examples/sensorLibrary/src/native/wifi/win32/wifisensor_windows/wifisensor_windows/Wifi_Win_Available/WiFiMan.h



//these functions create temporary profiles
WIFIAPI CreateTmpProfile(int Template);

WIFIAPI FreeTmpProfile(int ProfileHandle);

WIFIAPI CloneTmpProfile(int ProfileHandle);

WIFIAPI LoadTmpProfile(char * FileName);

WIFIAPI LoadTmpProfileFromString(char * Str);

WIFIAPI GetTmpProfileFromAdapter(int AdapterInd, int ProfileInd);

//apply temporary profile to adapter
WIFIAPI SetTmpProfileToAdapter(int ProfileHandle, int AdapterInd);

//get/set option
WIFIAPI SetTmpProfileOption(int ProfileHandle, char * OptionName, char * Value);

WIFIAPI GetTmpProfileOption(int ProfileHandle, char * OptionName, char * Value, int MaxCount);

WIFIAPI DeleteTmpProfileOption(int ProfileHandle, char * OptionName);

//802.1x support
WIFIAPI SetDefaultEapConfig(int ProfileHandle, int EapEnabled, int UseWindowsCredentials);

//save to xml file
WIFIAPI SaveTmpProfile(int ProfileHandle, char * FileName);


WIFIAPI GetWindowsFirewallStatus(int * ExceptionsNotAllowed, int * NotificationsDisabled);
 
WIFIAPI EnableWindowsFirewall(int ExceptionsNotAllowed, int NotificationsDisabled);
 
WIFIAPI DisableWindowsFirewall();


WIFIAPI EnumerateAllNetAdapters();

WIFIAPI GetNetAdapterName(int NetAdapterInd, char * Name, int MaxCount);

WIFIAPI GetNetAdapterGUID(int NetAdapterInd, char * Guid, int MaxCount);

WIFIAPI IsNetAdapterWiFi(int NetAdapterInd);

WIFIAPI GetNetAdapterState(int NetAdapterInd);

WIFIAPI EnableNetAdapter(int NetAdapterInd);

WIFIAPI DisableNetAdapter(int NetAdapterInd);

WIFIAPI RestartNetAdapter(int NetAdapterInd);

WIFIAPI GetNetAdapterCurrentIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int MaxCount);

WIFIAPI GetNetAdapterIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int * DHCPEnabled, int MaxCount);

WIFIAPI SetNetAdapterIPInfo(int NetAdapterInd, char * IP, char * Mask, char * Gateway, int DHCPEnabled);

WIFIAPI GetNetAdapterDNS(int NetAdapterInd, char * DNS, int MaxCount);

WIFIAPI SetNetAdapterDNS(int NetAdapterInd, char * DNS);

WIFIAPI GetNetAdapterMac(int NetAdapterInd, BYTE * d1, BYTE * d2, BYTE * d3, BYTE * d4, BYTE * d5, BYTE * d6);

WIFIAPI GetNetAdapterDefaultMac(int NetAdapterInd, BYTE * d1, BYTE * d2, BYTE * d3, BYTE * d4, BYTE * d5, BYTE * d6);

WIFIAPI SetNetAdapterMac(int NetAdapterInd, BYTE d1, BYTE d2, BYTE d3, BYTE d4, BYTE d5, BYTE d6);

WIFIAPI SetNetAdapterDefaultMac(int NetAdapterInd);

WIFIAPI GetNetAdapterFirewallState(int NetAdapterInd);

WIFIAPI EnableNetAdapterFirewall(int NetAdapterInd);

WIFIAPI DisableNetAdapterFirewall(int NetAdapterInd);

WIFIAPI GetNetAdapterTraffic(int NetAdapterInd, DWORD * InDataH, DWORD * InDataL, DWORD * OutDataH, DWORD * OutDataL);



//////// UNICODE SUPPORT /////////
WIFIAPI GetAdapterGUIDW(int AdapterInd, LPCWSTR Guid, int MaxCount);

WIFIAPI GetAdapterNameW(int AdapterInd, LPCWSTR Name, int MaxCount);

WIFIAPI GetAvailableNetworkNameW(int AdapterInd, int NetworkInd, LPCWSTR Name, int MaxCount);

WIFIAPI GetAvailableNetworkIndexW(int AdapterInd, LPCWSTR NetName);

WIFIAPI GetProfileNameW(int AdapterInd, int ProfileInd, LPCWSTR Name, int MaxCount);

WIFIAPI GetProfileNetworkIndexW(int AdapterInd, LPCWSTR NetName);

WIFIAPI GetCurrentNetworkNameW(int AdapterInd, LPCWSTR Name, int MaxCount);

WIFIAPI ConnectToNetworkW(int AdapterInd, LPCWSTR Name);

WIFIAPI EnableLogW(LPCWSTR Path, int RemoveOld);

WIFIAPI WriteLogW(LPCWSTR str);

WIFIAPI GetAdapterCurrentIPInfoW(int AdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int MaxCount);

WIFIAPI GetAdapterIPInfoW(int AdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int * DHCPEnabled, int MaxCount);

WIFIAPI SetAdapterIPInfoW(int AdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int DHCPEnabled);

WIFIAPI GetAdapterDNSW(int AdapterInd, LPCWSTR DNS, int MaxCount);

WIFIAPI SetAdapterDNSW(int AdapterInd, LPCWSTR DNS);

WIFIAPI PingW(LPCWSTR Host, int Timeout);

WIFIAPI LoadTmpProfileW(LPCWSTR FileName);

WIFIAPI LoadTmpProfileFromStringW(LPCWSTR Str);

WIFIAPI SetTmpProfileOptionW(int ProfileHandle, LPCWSTR OptionName, LPCWSTR Value);

WIFIAPI GetTmpProfileOptionW(int ProfileHandle, LPCWSTR OptionName, LPCWSTR Value, int MaxCount);

WIFIAPI SaveTmpProfileW(int ProfileHandle, LPCWSTR FileName);

WIFIAPI SaveTmpProfileToStringW(int ProfileHandle, LPCWSTR Str, int MaxCount);

WIFIAPI GetNetAdapterNameW(int NetAdapterInd, LPCWSTR Name, int MaxCount);

WIFIAPI GetNetAdapterGUIDW(int NetAdapterInd, LPCWSTR Guid, int MaxCount);

WIFIAPI GetNetAdapterCurrentIPInfoW(int NetAdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int MaxCount);

WIFIAPI GetNetAdapterIPInfoW(int NetAdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int * DHCPEnabled, int MaxCount);

WIFIAPI SetNetAdapterIPInfoW(int NetAdapterInd, LPCWSTR IP, LPCWSTR Mask, LPCWSTR Gateway, int DHCPEnabled);

WIFIAPI GetNetAdapterDNSW(int NetAdapterInd, LPCWSTR DNS, int MaxCount);

WIFIAPI SetNetAdapterDNSW(int NetAdapterInd, LPCWSTR DNS);

WIFIAPI SetStorageOptionsW(LPCWSTR FileName, int Flags);

WIFIAPI InstallDriverW(LPCWSTR path);