examples/sensorLibrary/src/native/wifi/win32/wifisensor_windows/wifisensor_windows/Wifi_Win_Available/WiFiMan.pas


function CreateTmpProfile(Template:integer):dword; stdcall; external WiFiLib;
function LoadTmpProfile(FileName:pansichar):dword; stdcall; external WiFiLib;
function LoadTmpProfileFromString(Str:pansichar):dword; stdcall; external WiFiLib;
function SaveTmpProfile(ProfileHandle:integer; FileName:pansichar):dword; stdcall; external WiFiLib;
function SaveTmpProfileToString(ProfileHandle:integer; Str:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function CloneTmpProfile(ProfileHandle:integer):dword; stdcall; external WiFiLib;
function GetTmpProfileOption(ProfileHandle:integer; OptionName:pansichar; Value:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetTmpProfileOption(ProfileHandle:integer; OptionName:pansichar; Value:pansichar):dword; stdcall; external WiFiLib;
function DeleteTmpProfileOption(ProfileHandle:integer; OptionName:pansichar):dword; stdcall; external WiFiLib;
function SetDefaultEapConfig(ProfileHandle:integer; EapEnabled:integer; UseWindowsCredentials:integer):dword; stdcall; external WiFiLib;
function FreeTmpProfile(ProfileHandle:integer):dword; stdcall; external WiFiLib;
function GetTmpProfileFromAdapter(AdapterInd:integer; ProfileInd:integer):dword; stdcall; external WiFiLib;
function SetTmpProfileToAdapter(ProfileHandle:integer; AdapterInd:integer):dword; stdcall; external WiFiLib;

function GetWindowsFirewallStatus(var ExceptionsNotAllowed:integer; var NotificationsDisabled:integer):dword; stdcall; external WiFiLib;
function EnableWindowsFirewall(ExceptionsNotAllowed:integer;  NotificationsDisabled:integer):dword; stdcall; external WiFiLib;
function DisableWindowsFirewall():dword; stdcall; external WiFiLib;

function EnumerateAllNetAdapters():dword; stdcall; external WiFiLib;
function GetNetAdapterName(NetAdapterInd:integer; Name:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterGUID(NetAdapterInd:integer; Guid:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function IsNetAdapterWiFi(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterState(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function EnableNetAdapter(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function DisableNetAdapter(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function RestartNetAdapter(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterCurrentIPInfo(NetAdapterInd:integer; IP:pansichar; Mask:pansichar; Gateway:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterIPInfo(NetAdapterInd:integer; IP:pansichar; Mask:pansichar; Gateway:pansichar; var DHCPEnabled:integer; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetNetAdapterIPInfo(NetAdapterInd:integer; IP:pansichar; Mask:pansichar; Gateway:pansichar; DHCPEnabled:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterDNS(NetAdapterInd:integer; DNS:pansichar; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetNetAdapterDNS(NetAdapterInd:integer; DNS:pansichar):dword; stdcall; external WiFiLib;
function GetNetAdapterMac(NetAdapterInd:integer; var d1, d2, d3, d4, d5, d6:byte):dword; stdcall; external WiFiLib;
function GetNetAdapterDefaultMac(NetAdapterInd:integer; var d1, d2, d3, d4, d5, d6:byte):dword; stdcall; external WiFiLib;
function SetNetAdapterMac(NetAdapterInd:integer; d1, d2, d3, d4, d5, d6:byte):dword; stdcall; external WiFiLib;
function SetNetAdapterDefaultMac(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterFirewallState(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function EnableNetAdapterFirewall(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function DisableNetAdapterFirewall(NetAdapterInd:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterTraffic(NetAdapterInd:integer; var InDataH, InDataL, OutDataH, OutDataL:DWORD):dword; stdcall; external WiFiLib;


//////// UNICODE SUPPORT /////////
type LPCWSTR=pwchar;

function GetAdapterGUIDW(AdapterInd:integer; Guid:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetAdapterNameW(AdapterInd:integer; Name:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetAvailableNetworkNameW(AdapterInd:integer; NetworkInd:integer; Name:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetAvailableNetworkIndexW(AdapterInd:integer; NetName:LPCWSTR):dword; stdcall; external WiFiLib;
function GetProfileNameW(AdapterInd:integer; ProfileInd:integer; Name:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetProfileNetworkIndexW(AdapterInd:integer; NetName:LPCWSTR):dword; stdcall; external WiFiLib;
function GetCurrentNetworkNameW(AdapterInd:integer; Name:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function ConnectToNetworkW(AdapterInd:integer; Name:LPCWSTR):dword; stdcall; external WiFiLib;
function EnableLogW(Path:LPCWSTR; RemoveOld:integer):dword; stdcall; external WiFiLib;
function WriteLogW(str:LPCWSTR):dword; stdcall; external WiFiLib;
function GetAdapterCurrentIPInfoW(AdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetAdapterIPInfoW(AdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; var DHCPEnabled:integer; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetAdapterIPInfoW(AdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; DHCPEnabled:integer):dword; stdcall; external WiFiLib;
function GetAdapterDNSW(AdapterInd:integer; DNS:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetAdapterDNSW(AdapterInd:integer; DNS:LPCWSTR):dword; stdcall; external WiFiLib;
function PingW(Host:LPCWSTR; Timeout:integer):dword; stdcall; external WiFiLib;
function LoadTmpProfileW(FileName:LPCWSTR):dword; stdcall; external WiFiLib;
function LoadTmpProfileFromStringW(Str:LPCWSTR):dword; stdcall; external WiFiLib;
function SetTmpProfileOptionW(ProfileHandle:integer; OptionName:LPCWSTR; Value:LPCWSTR):dword; stdcall; external WiFiLib;
function GetTmpProfileOptionW(ProfileHandle:integer; OptionName:LPCWSTR; Value:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function SaveTmpProfileW(ProfileHandle:integer; FileName:LPCWSTR):dword; stdcall; external WiFiLib;
function SaveTmpProfileToStringW(ProfileHandle:integer; Str:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterNameW(NetAdapterInd:integer; Name:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterGUIDW(NetAdapterInd:integer; Guid:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterCurrentIPInfoW(NetAdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterIPInfoW(NetAdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; var DHCPEnabled:integer; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetNetAdapterIPInfoW(NetAdapterInd:integer; IP:LPCWSTR; Mask:LPCWSTR; Gateway:LPCWSTR; DHCPEnabled:integer):dword; stdcall; external WiFiLib;
function GetNetAdapterDNSW(NetAdapterInd:integer; DNS:LPCWSTR; MaxCount:integer):dword; stdcall; external WiFiLib;
function SetNetAdapterDNSW(NetAdapterInd:integer; DNS:LPCWSTR):dword; stdcall; external WiFiLib;
function SetStorageOptionsW(FileName:LPCWSTR; Flags:integer):dword; stdcall; external WiFiLib;
function InstallDriverW(path:LPCWSTR):dword; stdcall; external WiFiLib;
/////////////////////////////////


function UnicodeToAnsi(const Str:string):pansichar;


                            implementation



function UnicodeToAnsi(const Str:string):pansichar;
begin
//this function is for Delphi2009 only.
//because Delphi2009 uses unicode strings we need to convert them to ansi strings
//not necessary for previous Delphi versions though it works there as it does nothing
//Note for Delphi2009 it's convenient to use unicode functions of WiFiMan 
  result:=pansichar(ansistring(Str));
end;



end.
